# dpc

./: .gitignore  Cargo.toml  LICENSE  README.md
bind/py/: Cargo.toml  plugin.py  pyproject.toml
bind/py/examples/beet/: .gitignore  beet.yml  dpc_plugin.py
bind/py/src/: lib.rs
src/: ir.rs  lib.rs  lir.rs  main.rs  mc.rs  mir.rs  project.rs
src/common/: block.rs  condition.rs  cost.rs  function.rs  mc.rs  mod.rs  modifier.rs  op.rs  range.rs  reg.rs  target_selector.rs  ty.rs  val.rs
src/common/mc/: block.rs  entity.rs  item.rs  mod.rs  modifier.rs  pos.rs  scoreboard_and_teams.rs  time.rs
src/common/mc/instr/: mod.rs
src/linker/: codegen.rs  datapack.rs  gen_fns.rs  mod.rs  ra.rs  text.rs
src/linker/codegen/: entity_target.rs  mod.rs  modifier.rs  t.rs  util.rs
src/linker/codegen/imp/: entity_target.rs  mod.rs
src/lower/: ir_to_lir.rs  ir_to_mir.rs  mir_to_lir.rs  mod.rs
src/lower/mir_to_lir/: cond.rs  mod.rs
src/macros/: mod.rs
src/mir/: instr_impls.rs  mod.rs
src/output/: gen_fns.rs  mod.rs  ra.rs  strip.rs  text.rs
src/output/codegen/: mod.rs  modifier.rs  t.rs  util.rs
src/output/codegen/imp/: entity_target.rs  mod.rs
src/output/datapack/: files.rs  mod.rs
src/parse/: lex.rs  mod.rs  parse.rs
src/passes/: mod.rs  util.rs
src/passes/analysis/: inline_candidates.rs  ir.rs  mod.rs  util.rs
src/passes/opt/: const_passes.rs  dce.rs  dse.rs  inline.rs  inst_combine.rs  lir.rs  merge_modifiers.rs  mir.rs  mod.rs  scoreboard_dataflow.rs  simplify.rs  simplify_modifiers.rs
src/passes/opt/constant/: cond.rs  fold.rs  mod.rs  prop.rs
src/passes/util/: mod.rs  usage_analysis.rs
src/util/: mod.rs
test/: playground.rs
test/codegen/: common.rs  gen_test.rs  mod.rs
test/codegen/tests/: all_instrs.dpc  all_instrs.mcfunction  folds.dpc  function_call.dpc  function_call.mcfunction  if.dpc  if.mcfunction  score_math.dpc  score_math.mcfunction  simplify_modifiers.dpc  simplify_modifiers.mcfunction  sine.dpc  sine.mcfunction  sqrt.dpc  sqrt.mcfunction  time.dpc  time.mcfunction  types.dpc  types.mcfunction  vals.dpc  vals.mcfunction
test/parse/: mod.rs  simple.dpc
test/parse/tests/: simple.dpc
tests/beet/: beet.yaml
(+133 files in other folders)
