[package]
name = "dpc"
version = "0.1.0"
edition = "2021"

[[test]]
name = "codegen"
path = "test/codegen/mod.rs"
harness = false

[dependencies]
anyhow = "1.0.75"
dashmap = "5.5.3"
include_dir = "0.7.3"
itertools = "0.11.0"
num-traits = "0.2.16"
rand = "0.8.5"
rayon = "1.8.0"
serde = "1.0.188"
serde_json = "1.0.107"
tinyvec = { version = "1.6.0", features = ["alloc"] }
