[package]
name = "dpc"
version = "0.1.0"
edition = "2021"
default-run = "dpc"

[[bin]]
name = "cg_gen"
path = "test/codegen/gen_test.rs"

[[bin]]
name = "playground"
path = "test/playground.rs"

[[test]]
name = "codegen"
path = "test/codegen/mod.rs"
harness = false

[[test]]
name = "parse"
path = "test/parse/mod.rs"
harness = false

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
dashmap = "5.5.3"
include_dir = "0.7.3"
itertools = "0.11.0"
num-traits = "0.2.16"
rand = "0.8.5"
rayon = "1.8.0"
serde = "1.0.188"
serde_json = "1.0.107"
tinyvec = { version = "1.6.0", features = ["alloc"] }
