[package]
name = "dpc"
version = "0.2.4"
edition = "2021"
description = "A compiler for Minecraft datapacks"
license = "GPL-3.0-or-later"
authors = ["CarbonSmasher"]
repository = "https://github.com/CarbonSmasher/dpc"
keywords = ["minecraft", "datapack", "compiler"]
categories = ["games"]
default-run = "dpc"

[workspace]
members = ["bind/py"]

[[bin]]
name = "cg_gen"
path = "test/codegen/gen_test.rs"

[[bin]]
name = "playground"
path = "test/playground.rs"

[[test]]
name = "codegen"
path = "test/codegen/mod.rs"
harness = false

[[test]]
name = "parse"
path = "test/parse/mod.rs"
harness = false

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
intset = "1.0.2"
itertools = "0.11.0"
num-traits = "0.2.16"
rand = "0.8.5"
rustc-hash = "1.1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tinyvec = { version = "1.6.0", features = ["alloc"] }

[dev-dependencies]
color-print = "0.3.5"
include_dir = "0.7.3"
